List numbering tweaks

--- a/app/views/devise/registrations/_terms.html.haml
+++ b/app/views/devise/registrations/_terms.html.haml
@@ -1,5 +1,5 @@
 :markdown
-	This Agreement is made [DATE] by and between the Open Data Institute having its principal place of business at 3rd Floor, 65 Clifton Street, London, EC2A 4JE (“ODI”) and [ORGANISATION NAME].
+	This Agreement is made [DATE] by and between the Open Data Institute having its principal place of business at 3rd Floor, 65 Clifton Street, London, EC2A 4JE (“ODI”) and your organisation.
 
 	Whereas ODI seeks to admit members to its organisation and to work with and provide services to them;
 
@@ -49,11 +49,12 @@
 
 	#####  Training, education, research and professional services discount 
 
-	All members shall be entitled to 20% discount on published OD training courses and day rates on professional services contracts entered into with ODI during their membership subject to the following limits: 
-	  * Supporter - Maximum of 12 training courses, Professional Services to the value of £10,000 
-	  * Member - Professional Services to the value of £50,000 
-	  * Sponsor - Professional Services to the value of £100,000 
-	  * Partner - Unlimited 
+	1. All members shall be entitled to 20% discount on published OD training courses and day rates on professional services contracts entered into with ODI during their membership subject to the following limits: 
+
+	    a. Supporter - Maximum of 12 training courses, Professional Services to the value of £10,000 
+	    b. Member - Professional Services to the value of £50,000 
+	    c. Sponsor - Professional Services to the value of £100,000 
+	    d. Partner - Unlimited 
 
 	#####  Training and professional services vouchers
 
@@ -67,9 +68,9 @@
 	All members shall be entitled to Brand Placement and Recognition as follows: 
 
 	1. Partners: 
-	  	* Partner names and logos shall be displayed on the ODI website. 
-	    * Partner will be entitled to headline (on a non-exclusive basis) with the ODI Annual Summit. 
-	    * Partner shall be responsible for providing appropriate event branding collateral. 
+	  	a. Partner names and logos shall be displayed on the ODI website. 
+	    b. Partner will be entitled to headline (on a non-exclusive basis) with the ODI Annual Summit. 
+	    c. Partner shall be responsible for providing appropriate event branding collateral. 
 	2. Sponsors: names and logos shall be displayed on the ODI website and at ODI networking events. Sponsors shall be responsible for providing appropriate branding collateral 
 	3. Members names and logos shall be displayed on the ODI website 
 	4. Supporters names shall be displayed as text on the ODI website 
@@ -79,60 +80,60 @@
 	#####  Annual Summit 
 
 	  1. All organisation members shall be entitled to attend the ODI Annual Summit at no charge (the event is limited to circa 200 attendees and is chargeable to non members) as follows: 
-	  	* Partners may send up to 3 attendees 
+	  	a. Partners may send up to 3 attendees 
 	    * Sponsors may send up to 2 attendees, and nominate up to 1 speaker 
-	    * Members and Supporter organisations may send 1 attendee 
-	    * All persons attending on behalf of an organisations member must be a director and/ or an employee of the organisation 
-	    * Individual members may attend in person; they may not send a representative 
+	    b. Members and Supporter organisations may send 1 attendee 
+	    c. All persons attending on behalf of an organisations member must be a director and/ or an employee of the organisation 
+	    d. Individual members may attend in person; they may not send a representative 
 	  2. All members shall be entitled to attend ODI open data bi-annual ODI networking evenings as follows: 
-	    * Partners may send 3 attendees and shall be entitled to brand as a Platinum Sponsor 
-	    * Sponsors may send 2 attendees and shall be entitled to brand as a Sponsor 
-	    * Members and Supporters may send 1 attendee 
+	    a. Partners may send 3 attendees and shall be entitled to brand as a Platinum Sponsor 
+	    b. Sponsors may send 2 attendees and shall be entitled to brand as a Sponsor 
+	    c. Members and Supporters may send 1 attendee 
 	  3. The following conditions shall apply: 
-	    * All persons attending on behalf of an organisations member must be a director and/ or an employee of the organisation 
-	    * Individual members may attend in person; they may not send a representative 
+	    d. All persons attending on behalf of an organisations member must be a director and/ or an employee of the organisation 
+	    e. Individual members may attend in person; they may not send a representative 
 	  4. All members shall be entitled to **free** use of ODI desk space and ODI meeting rooms in accordance with the current ODI Facilities Policy as follows: 
-	    * Partners may use ODI desk space on up to 36 visits (a visit constitutes 3hrs of working time max during a day) per year and may use ODI meeting rooms for up to 18 hours per year 
-	    * Sponsors may use ODI desk space on up to 12 visits per year and may use ODI meeting rooms for up to 6 hours per year 
-	    * Members may use ODI desk space on up to 6 visits per year and may use ODI meeting rooms for up to 3 hours per year 
-	    * Supporters may request use of ODI desk space and ODI meeting rooms entirely at the discretion of ODI. 
-	    * Use of ODI desk space and ODI meeting rooms is subject to availability. Free use of ODI meeting rooms shall be restricted to ODI pods but larger rooms may be booked at charges published on the ODI website. 
-	    * The use of desk space and other membership benefits is subject to receipt of payment in full for membership. 
+	    a. Partners may use ODI desk space on up to 36 visits (a visit constitutes 3hrs of working time max during a day) per year and may use ODI meeting rooms for up to 18 hours per year 
+	    b. Sponsors may use ODI desk space on up to 12 visits per year and may use ODI meeting rooms for up to 6 hours per year 
+	    c. Members may use ODI desk space on up to 6 visits per year and may use ODI meeting rooms for up to 3 hours per year 
+	    d. Supporters may request use of ODI desk space and ODI meeting rooms entirely at the discretion of ODI. 
+	    e. Use of ODI desk space and ODI meeting rooms is subject to availability. Free use of ODI meeting rooms shall be restricted to ODI pods but larger rooms may be booked at charges published on the ODI website. 
+	    f. The use of desk space and other membership benefits is subject to receipt of payment in full for membership. 
 
 	####  V. Termination of membership
 
 	  1. Without prejudice to any other rights or remedies which the parties may have, ODI **may** terminate any membership if: 
-	    * a member fails to pay any membership fees within 30 days of the invoice date; 
-	    * if a member is involved in any regulatory actions, civil or criminal proceedings or any other acts or omissions as a consequence of which the member's continued membership may, in the sole opinion of ODI, be prejudicial to ODI or bring ODI into disrepute; 
-	    * a member suspends, or threatens to suspend, payment of its debts, is unable to pay its debts as they fall due, admits inability to pay its debts or (being a company) is deemed unable to pay its debts within the meaning of section 123 of the Insolvency Act 1986 or (being a natural person) is deemed either unable to pay its debts or as having no reasonable prospect of so doing, in either case, within the meaning of section 268 of the Insolvency Act 1986 or (being a partnership) has any partner to whom any of the foregoing apply; or 
-	    * any event occurs, or proceeding is taken, with respect to a member in any jurisdiction to which it is subject that has an effect equivalent or similar to any of the events mentioned in the previous clause; or 
-	    * a member suspends or ceases, or threatens to suspend or cease, to carry on all or a substantial part of its business; or 
-	    * there is a change of control of a member (as defined in section 574 of the Capital Allowances Act 2001). 
+	    a. a member fails to pay any membership fees within 30 days of the invoice date; 
+	    b. if a member is involved in any regulatory actions, civil or criminal proceedings or any other acts or omissions as a consequence of which the member's continued membership may, in the sole opinion of ODI, be prejudicial to ODI or bring ODI into disrepute; 
+	    c. a member suspends, or threatens to suspend, payment of its debts, is unable to pay its debts as they fall due, admits inability to pay its debts or (being a company) is deemed unable to pay its debts within the meaning of section 123 of the Insolvency Act 1986 or (being a natural person) is deemed either unable to pay its debts or as having no reasonable prospect of so doing, in either case, within the meaning of section 268 of the Insolvency Act 1986 or (being a partnership) has any partner to whom any of the foregoing apply; or 
+	    d. any event occurs, or proceeding is taken, with respect to a member in any jurisdiction to which it is subject that has an effect equivalent or similar to any of the events mentioned in the previous clause; or 
+	    e. a member suspends or ceases, or threatens to suspend or cease, to carry on all or a substantial part of its business; or 
+	    f. there is a change of control of a member (as defined in section 574 of the Capital Allowances Act 2001). 
 	  3. Without prejudice to any other rights or remedies which the parties may have, the Member may terminate the Agreement: 
-	    * if the ODI is involved in any regulatory actions, civil or criminal proceedings or any other acts or omissions as a consequence of which Member’s continued membership of the ODI organisation may, in the sole opinion of Member, be prejudicial to Member or bring Member into disrepute; 
-	    * the ODI suspends, or threatens to suspend, payment of its debts, is unable to pay its debts as they fall due, admits inability to pay its debts or (being a company) is deemed unable to pay its debts within the meaning of section 123 of the Insolvency Act 1986; or 
-	    * any event occurs, or proceeding is taken, with respect to the ODI in any jurisdiction to which it is subject that has an effect equivalent or similar to any of the events mentioned in clause above; or 
-	    * the ODI suspends or ceases, or threatens to suspend or cease, to carry on all or a substantial part of its business; or 
-	    * 12 months after the original membership date or any anniversary thereafter by giving not less than 30 days notice, such notice to expire on the relevant anniversary of the original membership date. 
+	    a. if the ODI is involved in any regulatory actions, civil or criminal proceedings or any other acts or omissions as a consequence of which Member’s continued membership of the ODI organisation may, in the sole opinion of Member, be prejudicial to Member or bring Member into disrepute; 
+	    b. the ODI suspends, or threatens to suspend, payment of its debts, is unable to pay its debts as they fall due, admits inability to pay its debts or (being a company) is deemed unable to pay its debts within the meaning of section 123 of the Insolvency Act 1986; or 
+	    c. any event occurs, or proceeding is taken, with respect to the ODI in any jurisdiction to which it is subject that has an effect equivalent or similar to any of the events mentioned in clause above; or 
+	    d. the ODI suspends or ceases, or threatens to suspend or cease, to carry on all or a substantial part of its business; or 
+	    e. 12 months after the original membership date or any anniversary thereafter by giving not less than 30 days notice, such notice to expire on the relevant anniversary of the original membership date. 
 
 	####  VI. Effects of termination
 
 	1. On termination of membership for any reason: 
-	    * the member in question shall immediately pay ODI any sums owing to it as at the date of termination 
-	    * the member in question shall within 7 working days of termination ensure that any reference to ODI, of the member in question 's membership of it together with any of ODI's trade marks, are removed from all advertising and promotional materials, websites, stationery and other materials of the member in question 
-	    * the member in question shall immediately cease promoting and advertising its relationship with ODI and distributing any materials referring to it; and 
-	   * the member in question shall take all reasonable steps to ensure that third parties are not misled as to the current relationship with ODI by virtue of any materials that remain in the market place and public domain. 
+	    a. the member in question shall immediately pay ODI any sums owing to it as at the date of termination 
+	    b. the member in question shall within 7 working days of termination ensure that any reference to ODI, of the member in question 's membership of it together with any of ODI's trade marks, are removed from all advertising and promotional materials, websites, stationery and other materials of the member in question 
+	    c. the member in question shall immediately cease promoting and advertising its relationship with ODI and distributing any materials referring to it; and 
+	    d. the member in question shall take all reasonable steps to ensure that third parties are not misled as to the current relationship with ODI by virtue of any materials that remain in the market place and public domain. 
 
 	####  VII. Limitation of liability
 
 	  1. This clause VII. sets out the entire financial liability of the parties (including any liability for the acts or omissions of its employees, agents, consultants, and subcontractors) to the other in respect of: 
-	    * any breach of these Terms &amp; Conditions; 
-	    * any use made by any member of its membership of ODI; and 
-	    * any representation, statement or tortious act or omission (including negligence) arising under or in connection with these Terms. 
+	    a. any breach of these Terms &amp; Conditions; 
+	    b. any use made by any member of its membership of ODI; and 
+	    c. any representation, statement or tortious act or omission (including negligence) arising under or in connection with these Terms. 
 	  2. All warranties, conditions and other terms implied by statute or common law are, to the fullest extent permitted by law, excluded. 
 	  3. Nothing in these Terms &amp; Conditions limits or excludes the liability of ODI or the Member: 
-	    * for death or personal injury resulting from negligence; or 
-	    * for any damage or liability incurred by the Member or ODI (as applicable) as a result of fraud or fraudulent misrepresentation by the other. 
+	    a. for death or personal injury resulting from negligence; or 
+	    b. for any damage or liability incurred by the Member or ODI (as applicable) as a result of fraud or fraudulent misrepresentation by the other. 
 	  4. The parties shall not be liable for loss of profits; loss of business; depletion of goodwill and/or similar losses; loss of anticipated savings; loss of goods; loss of contract; loss of use; loss of corruption of data or information; or any special, indirect, consequential or pure economic loss, costs, damages, charges or expenses. 
 	  5. Each party’s total liability in contract, tort (including negligence or breach of statutory duty), misrepresentation, restitution or otherwise arising in connection with the performance, or contemplated performance, of these Terms &amp; Conditions shall be limited to the annual membership fee paid by the Member in the year to which any claim relates. 
 	  6. Whilst ODI uses reasonable endeavours to ensure that any ODI website used by members is available at all times, ODI makes no warranty that any such website will meet any member's requirements or will be uninterrupted, timely, secure or error-free, that defects will be corrected or that the website or the server that makes it available is free of viruses or bugs or is fully functional, accurate or reliable. 
