More listing changes

--- a/app/views/devise/registrations/_terms.html.haml
+++ b/app/views/devise/registrations/_terms.html.haml
@@ -8,8 +8,8 @@
 	  1. Member agrees to pay an annual membership subscription of [AMOUNT]. 
 	  2. The General Terms and Conditions of Membership as set out in Schedule 1 are incorporated in and shall form part of this Agreement. 
 	  3. All notices or other communications to or upon either party shall be in email and writing to 
-	    * ODI: 3rd Floor, 65 Clifton Street, London, EC2A 4JE and members@theodi.org
-	    * Member: [EMAIL]
+	    a. ODI: 3rd Floor, 65 Clifton Street, London, EC2A 4JE and members@theodi.org
+	    b. Member: email address registered on their account
 	  4. Member warrants and undertakes that it is and will, throughout the period of its membership, remain in compliance with the eligibility criteria for its category of membership as set out in the document attached to this Agreement and further that it will throughout the period of membership comply fully with all its responsibilities and obligations set out in the Agreement and abide by the terms and conditions as set out in this Agreement. 
 
 	###  Schedule 1
@@ -23,10 +23,10 @@
 
 	  1. Membership is open to both organisations and individuals from around the world. 
 	  2. Membership subscription of the ODI is open to organisations in one of the following membership categories: 
-	    * Partner 
-	    * Sponsor 
-	    * Member 
-	    * Supporter 
+	    a. Partner 
+	    b. Sponsor 
+	    c. Member 
+	    d. Supporter 
 	  3. Individuals may become members in either the Member or Supporter categories of membership. 
 	  4. Membership as a Partner or a Sponsor is for a minimum period of 3 years; membership as a Member or Supporter is for a minimum period of 1 year; in each case subject to earlier termination in accordance with the terms of this Agreement. 
 	  5. Membership of the ODI is subject at all times to the approval of the ODI Board of Directors. 
@@ -36,10 +36,10 @@
 
 	  1. Membership fees are set from time to time by the ODI Board of Directors. Existing members will be notified of any increase in membership fees a minimum of 90 days prior to the next membership renewal date. 
 	  2. The current membership fees are as follows: 
-	  	* Partner: £50,000 per annum of which up to £15,000 per annum may be payment in kind 
-	    * Sponsor: £25,000 per annum of which up to £7,500 may be payment in kind 
-	    * Member: £4,800 per annum 
-	    * Supporter: £540 per annum 
+	  	a. Partner: £50,000 per annum of which up to £15,000 per annum may be payment in kind 
+	    b. Sponsor: £25,000 per annum of which up to £7,500 may be payment in kind 
+	    c. Member: £4,800 per annum 
+	    d. Supporter: £540 per annum 
 	  3. Payments in kind may be through the contribution of services, technology or other expertise as agreed and valued in advance with ODI. 
 	  4. All per annum membership fees will be invoiced at the commencement of the membership term and each year thereafter, and shall be payable in full within 60 days from the date of the invoice. The stated membership fees are subject to VAT at the prevailing rate that ODI shall add to its invoices as applicable. 
 	  5. Unless this Agreement is terminated earlier in accordance with its terms, this Agreement shall automatically renew for successive one year periods unless 30 days notice is given to terminate the Agreement. 
@@ -81,10 +81,10 @@
 
 	  1. All organisation members shall be entitled to attend the ODI Annual Summit at no charge (the event is limited to circa 200 attendees and is chargeable to non members) as follows: 
 	  	a. Partners may send up to 3 attendees 
-	    * Sponsors may send up to 2 attendees, and nominate up to 1 speaker 
-	    b. Members and Supporter organisations may send 1 attendee 
-	    c. All persons attending on behalf of an organisations member must be a director and/ or an employee of the organisation 
-	    d. Individual members may attend in person; they may not send a representative 
+	    b. Sponsors may send up to 2 attendees, and nominate up to 1 speaker 
+	    c. Members and Supporter organisations may send 1 attendee 
+	    d. All persons attending on behalf of an organisations member must be a director and/ or an employee of the organisation 
+	    e. Individual members may attend in person; they may not send a representative 
 	  2. All members shall be entitled to attend ODI open data bi-annual ODI networking evenings as follows: 
 	    a. Partners may send 3 attendees and shall be entitled to brand as a Platinum Sponsor 
 	    b. Sponsors may send 2 attendees and shall be entitled to brand as a Sponsor 
