--- a/app/views/organizations/edit.html.erb
+++ b/app/views/organizations/edit.html.erb
@@ -15,6 +15,8 @@
 		<%= f.label :description, :class => 'control-label' %>
 		<div class='controls'>
 			<%= f.text_area :description, :class => 'input-xlarge', :rows => '8' %>
+			<span class="help-block"><%= "Limit of #{@limit} characters" %></span>
+			<!-- We need to do some fancy JS countdown thing. That will come later -->
 		</div>
 	</div>
 	
