Make brand placement into a clause and renumber appropriately

--- a/app/views/devise/registrations/_terms.html.erb
+++ b/app/views/devise/registrations/_terms.html.erb
@@ -117,7 +117,7 @@
 <h5>
   Training, education, research and professional services discount
 </h5>
-<ol>
+<ol start='1'>
   <li>
     <p>
       All members shall be entitled to 20% discount on published OD training courses and day rates 
@@ -139,7 +139,7 @@
 <h5>
   Training and professional services vouchers
 </h5>
-<ol>
+<ol start='2'>
   <li>Partners shall receive training and professional services vouchers worth £18,000 annually.
   </li>
   <li>Sponsors shall receive training and professional services vouchers worth £7,000 annually.
@@ -154,35 +154,39 @@
 <h5>
   Branding, events, networking and collaboration
 </h5>
-<p>
-  All members shall be entitled to Brand Placement and Recognition as follows:
-</p>
-<ol>
-  <li>Partners:
+<ol start='1'>
+  <li>
+    <p>
+      All members shall be entitled to Brand Placement and Recognition as follows:
+    </p>
     <ul>
-      <li>a. Partner names and logos shall be displayed on the ODI website.
+      <li>a. Partners:
+        <ul>
+          <li>i. Partner names and logos shall be displayed on the ODI website.
+          </li>
+          <li>ii. Partner will be entitled to headline (on a non-exclusive basis) with the ODI Annual Summit.
+          </li>
+          <li>iii. Partner shall be responsible for providing appropriate event branding collateral.
+          </li>
+        </ul>
       </li>
-      <li>b. Partner will be entitled to headline (on a non-exclusive basis) with the ODI Annual Summit.
+      <li>b. Sponsors: names and logos shall be displayed on the ODI website and at ODI networking events. 
+        Sponsors shall be responsible for providing appropriate branding collateral
       </li>
-      <li>c. Partner shall be responsible for providing appropriate event branding collateral.
+      <li>c. Members names and logos shall be displayed on the ODI website
+      </li>
+      <li>d. Supporters names shall be displayed as text on the ODI website
+      </li>
+      <li>e. Branding opportunities with the Open Data Institute associated events during the membership term 
+        at the discretion of ODI. Events are generally associated to sectors and as such will attract relevant 
+        interested attendees.
+      </li>
+      <li>f. Subject to the approval of the ODI Board, Partners shall be entitled to one representative on the 
+        Sector Pioneers Board to which ODI may appoint other representatives from industry, public sector 
+        and the SME, not for profit/charity and start-up communities. Sector Pioneers lead and inform the 
+        debate on open data within their respective industries, meet on a quarterly basis and provide input
       </li>
     </ul>
-  </li>
-  <li>Sponsors: names and logos shall be displayed on the ODI website and at ODI networking events. 
-    Sponsors shall be responsible for providing appropriate branding collateral
-  </li>
-  <li>Members names and logos shall be displayed on the ODI website
-  </li>
-  <li>Supporters names shall be displayed as text on the ODI website
-  </li>
-  <li>Branding opportunities with the Open Data Institute associated events during the membership term 
-    at the discretion of ODI. Events are generally associated to sectors and as such will attract relevant 
-    interested attendees.
-  </li>
-  <li>Subject to the approval of the ODI Board, Partners shall be entitled to one representative on the 
-    Sector Pioneers Board to which ODI may appoint other representatives from industry, public sector 
-    and the SME, not for profit/charity and start-up communities. Sector Pioneers lead and inform the 
-    debate on open data within their respective industries, meet on a quarterly basis and provide input
   </li>
 </ol>
 <h5>
